feat(verify): finish verify verifacation code
